--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "dependencies": {
     "@mantine/core": "^7.15.1",
     "@mantine/hooks": "^7.15.1",
-    "@mantine/notifications": "^7.15.1",
     "@react-router/fs-routes": "^7.0.2",
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
+    "hono": "^4.6.14",
     "isbot": "^5.1.17",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "react-router-hono-server": "^2.3.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
