--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "dev": "react-router dev",
     "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
+    "auth:generate": "npx @better-auth/cli generate --output ./server/db/schema.ts --config ./server/lib/auth.ts --y",
+    "auth:migrate": "npx @better-auth/cli migrate --config ./server/lib/auth.ts --y",
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "npx drizzle-kit migrate",
+    "db:studio": "npx drizzle-kit studio",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@libsql/client": "^0.14.0",
     "@mantine/core": "^7.15.1",
     "@mantine/hooks": "^7.15.1",
     "@react-router/fs-routes": "^7.0.2",
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
+    "better-auth": "^1.1.2-beta.3",
+    "drizzle-orm": "^0.38.2",
     "hono": "^4.6.14",
     "isbot": "^5.1.17",
     "lucide-react": "^0.468.0",
@@ -28,11 +36,13 @@
     "@antfu/eslint-config": "^3.12.0",
     "@eslint-react/eslint-plugin": "^1.19.0",
     "@react-router/dev": "^7.0.2",
+    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.30.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
