--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ BETTER_AUTH_URL=http://localhost:3000
 BETTER_AUTH_SECRET=
 
 DATABASE_URL=file:./server/db/sqlite.db
-DATABASE_AUTH_SECRET= # Can be empty on dev
+DATABASE_AUTH_TOKEN= # Can be empty on dev
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
